[gd_scene load_steps=9 format=2]

[ext_resource path="res://art/swiat/Untitled_Artwork(4).png" type="Texture" id=1]
[ext_resource path="res://art/swiat/Untitled_Artwork(5).png" type="Texture" id=2]
[ext_resource path="res://art/swiat/Untitled_Artwork(1).png" type="Texture" id=3]
[ext_resource path="res://art/swiat/Untitled_Artwork(2).png" type="Texture" id=4]
[ext_resource path="res://art/swiat/Untitled_Artwork(3).png" type="Texture" id=5]
[ext_resource path="res://Start.gd" type="Script" id=6]
[ext_resource path="res://S@p0S7UN0.mp3" type="AudioStream" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": false,
"name": "start",
"speed": 1.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="StartScreen" type="AnimatedSprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 0.666667, 0.666667 )
frames = SubResource( 1 )
animation = "start"

[node name="startMusic" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 640, 384 )
stream = ExtResource( 7 )

[connection signal="Startuj" from="." to="." method="_on_Node2D_Startuj"]
